# rag-optimization-framework

./: .env.example  .gitignore  EXPERIMENT.md  EXPERIMENT.vi.md  LICENSE  README.en.md  README.md  app.py  compare_results.py  pyproject.toml  requirements-lock.txt  requirements.txt
data/: ragas_testset.json
data/data_raw/: Baocaothanhtich.TNTT.docx  CV39.[.13.03.2025].PhanbokhenthuongTinhnguyenDongXuantinhnguyen2025.docx  So102.[26.9.25].CV.Gapmatsinhvienkhoa51.docx  So103.[26.9.25].CV.TrienkhaidangkylichhoatdongDoan-Hoi.docx  So18.[17.11.25].TB.GiaithevathanhlapmotsoChiDoankhoa51.docx  So38.[09.02.26].TB.DangkythamgiahoclopboiduongnhanthucveDCSVN.docx  So40.[02.3.26].TB.BaocaosoluongDoanvien,HoivienquyInam2026.docx  So42.[02.3.26].TB.TrienkhaiCuocthisangtaoAItuyentruyenbaucuQuochoikhoaXVI.docx  So43.[03.3.26].TB.XetchondanhhieuTNTTlamtheoloiBaccapTruong2025.docx  So44.[09.3.26].TB.NgayhoiHMNDdot2nam2026.docx  So44.[26.9.25].TB.KetquathiduaLCDnamhoc2024-2025.docx  So50.[30.3.26].TB.NhanxetsoDoankhoa48namhoc2025-2026.docx  So51.[31.3.26].TB.TonghophoatdongngoaikhoaHKIInamhoc2025-2026.docx  So53.[01.4.26].TB.TrienkhaiCuocthiMyResearchDiaries.docx  So57.[20.4.26].CV.TrienkhaiCuocthichinhluan2026.docx  So59.[02.3.26].QD.BanhanhBotieuchinamhoc2025-2026.docx  So61.[17.3.26].QD.CongnhanTNTT2025.docx  Tham luận làm giàu chính đáng.docx  (+3 more)
outputs/: comparison_summary.csv
phase1_testset_gen/: config.py  run_testset.py  step1_convert.py  step2_models.py  step3_generate.py
phase2_baseline/: async_utils.py  config.py  models.py  run_eval.py  run_pipeline.py
(+45 files in other folders)
