[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-optimization-framework"
version = "0.1.0"
description = "End-to-end RAG optimization framework for Vietnamese documents"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["phase1_testset_gen*", "phase2_baseline*", "phase3_upgrades*"]
